[package]
name = "bench-rocksdb"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.4.0"
log = "0.4.17"
rand = "0.8.5"
rocksdb = "0.19.0"

[profile.release]
debug = true    # for cargo flamegraph to be able to profile in release mode

[[bench]]
name = "batch_write"
harness = false

[[bench]]
name = "seek"
harness = false
